chandeliers-lus/tests/compile_fail/ui/tc/trailing.stderr
error: Type mismatch between the left and right sides: expected (), got (()) instead that does not have the same length
 --> tests/compile_fail/ui/tc/trailing.rs:5:9
  |
5 |         () = ((),);
  |         ^^^^^^^^^^
  |
note: This element has type ()
 --> tests/compile_fail/ui/tc/trailing.rs:5:9
  |
5 |         () = ((),);
  |         ^
note: While this element has type (())
 --> tests/compile_fail/ui/tc/trailing.rs:5:14
  |
5 |         () = ((),);
  |              ^^^^^

error: Type mismatch between the left and right sides: expected (), got (()) instead that does not have the same length
  --> tests/compile_fail/ui/tc/trailing.rs:14:14
   |
14 |     let () = foo((),); tel;
   |              ^^^^^^^^
   |
note: This element has type ()
  --> tests/compile_fail/ui/tc/trailing.rs:10:14
   |
10 |     node foo() returns ();
   |              ^
note: While this element has type (())
  --> tests/compile_fail/ui/tc/trailing.rs:14:17
   |
14 |     let () = foo((),); tel;
   |                 ^^^^^
